# ClassTime

./: CMakeLists.txt  README.md  main.cpp
TimeLib/: time.cpp  time.hpp
tests/: CMakeLists.txt  testing_app.cpp
